fixed spacing

--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@
     margin: 0;
     padding: auto;
     box-shadow: 0 6px 8px rgba(0, 0, 0, .2);
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     z-index: 10;
